--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <section class="hero-image">
       <div class="container">
-        <h1 class="heading">Неопознанный Енот</h1>
+        <h1 class="heading">Пєтушара дирявий</h1>
       </div>
       <div class="container">
       <p>Junior верстальщик</p></div>
