--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1 class="heading">Пєтушара дирявий</h1>
       </div>
       <div class="container">
-      <p>Junior верстальщик</p></div>
+      <p><a href="https://auto.ria.com/auto_ford_focus_25956731.html">Нажми сюда</a></p></div>
     </section>
 
     <section class="intro">
