--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
 
     <section class="hero-image">
       <div class="container">
-        <h1 class="heading">Пєтушара дирявий</h1>
+        <h1 class="heading">Таксі не дорого<br>
+        Везу по городу<br>
+      0687656088</h1>
+      <img src="img/ps-11.png">
       </div>
       <div class="container">
-      <p><a href="https://auto.ria.com/auto_ford_focus_25956731.html">Нажми сюда</a></p></div>
+      <p>>Нажми сюда</p></div>
     </section>
 
     <section class="intro">
